[gd_scene load_steps=3 format=2]

[ext_resource path="res://dynamicFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://BaseMenu.gd" type="Script" id=2]

[node name="BaseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -103.0
margin_top = 82.0
margin_right = -2.0
margin_bottom = -2.0

[node name="Button" type="Button" parent="VBoxContainer"]
margin_right = 101.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 1 )
text = "Start Mission"

[node name="Button2" type="Button" parent="VBoxContainer"]
margin_top = 25.0
margin_right = 101.0
margin_bottom = 46.0
custom_fonts/font = ExtResource( 1 )
text = "Pass a Day"

[node name="Button3" type="Button" parent="VBoxContainer"]
margin_top = 50.0
margin_right = 101.0
margin_bottom = 71.0
custom_fonts/font = ExtResource( 1 )
text = "Save Game"

[node name="Button4" type="Button" parent="VBoxContainer"]
margin_top = 75.0
margin_right = 101.0
margin_bottom = 96.0
custom_fonts/font = ExtResource( 1 )
text = "Exit"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_left = 8.0
margin_top = 2.0
margin_right = 75.0
margin_bottom = 181.0

[node name="DayCounter" type="Label" parent="VBoxContainer2"]
margin_right = 94.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 1 )
text = "Day:  1"

[node name="HealthTab" type="Label" parent="VBoxContainer2"]
margin_top = 19.0
margin_right = 94.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 1 )
text = "Health:  3"

[node name="FoodTab" type="Label" parent="VBoxContainer2"]
margin_top = 38.0
margin_right = 94.0
margin_bottom = 53.0
custom_fonts/font = ExtResource( 1 )
text = "Food: 10"

[node name="ResourcesTab" type="Label" parent="VBoxContainer2"]
margin_top = 57.0
margin_right = 94.0
margin_bottom = 72.0
custom_fonts/font = ExtResource( 1 )
text = "Resources: 10"

[node name="MoneyTab" type="Label" parent="VBoxContainer2"]
margin_top = 76.0
margin_right = 94.0
margin_bottom = 91.0
custom_fonts/font = ExtResource( 1 )
text = "Money: 0"

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_Button3_pressed"]
